force-app/main/default/objects/Notiforce_IfStaticValue__c/Notiforce_IfStaticValue__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Notiforce 인터페이스 상수 정의</description>
    <label>Notiforce 인터페이스 상수 정의</label>
</CustomObject>