force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/ars_num__c.field-meta.xml
<CustomField>
    <fullName>ars_num__c</fullName>
    <description>080 ARS Phone number for blocking reception</description>
    <inlineHelpText>080 ARS 수신 차단 신청 전화번호</inlineHelpText>
    <label>수신차단 080 번호</label>
    <length>16</length>
    <type>Text</type>
</CustomField>