force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/dsptch_num__c.field-meta.xml
<CustomField>
    <fullName>dsptch_num__c</fullName>
    <description>dsptch_num 발신 번호</description>
    <inlineHelpText>발신 번호</inlineHelpText>
    <label>발신 번호</label>
    <length>32</length>
    <type>Text</type>
</CustomField>