force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/hub_aes_init_vector__c.field-meta.xml
<CustomField>
    <fullName>hub_aes_init_vector__c</fullName>
    <description>hub_aes_init_vector</description>
    <label>HUB_VECTOR_KEY</label>
    <length>16</length>
    <type>Text</type>
</CustomField>