force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/hub_aes_private_key__c.field-meta.xml
<CustomField>
    <fullName>hub_aes_private_key__c</fullName>
    <description>hub_aes_private_key</description>
    <label>HUB_PRIVATE_KEY</label>
    <length>32</length>
    <type>Text</type>
</CustomField>