force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/hub_auth_name__c.field-meta.xml
<CustomField>
    <fullName>hub_auth_name__c</fullName>
    <description>hub_auth_name</description>
    <label>HUB 계정</label>
    <length>255</length>
    <type>Text</type>
</CustomField>