force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/hub_auth_password__c.field-meta.xml
<CustomField>
    <fullName>hub_auth_password__c</fullName>
    <description>hub_auth_password</description>
    <label>HUB 비밀번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>