force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/hub_url__c.field-meta.xml
<CustomField>
    <fullName>hub_url__c</fullName>
    <description>hub_url</description>
    <label>HUB URL</label>
    <type>Url</type>
</CustomField>