force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/kakaobizId__c.field-meta.xml
<CustomField>
    <fullName>kakaobizId__c</fullName>
    <description>카카오 비즈 톡 아이디</description>
    <inlineHelpText>카카오 비즈 톡 아이디</inlineHelpText>
    <label>카카오 비즈 아이디</label>
    <length>100</length>
    <type>Text</type>
</CustomField>