force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/sfdc_aes_algorithm__c.field-meta.xml
<CustomField>
    <fullName>sfdc_aes_algorithm__c</fullName>
    <description>sfdc_aes_algorithm</description>
    <label>SFDC_ENCRYPT_ALGORITHM</label>
    <length>10</length>
    <type>Text</type>
</CustomField>