force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/sfdc_aes_init_vector__c.field-meta.xml
<CustomField>
    <fullName>sfdc_aes_init_vector__c</fullName>
    <description>sfdc_aes_init_vector</description>
    <label>SFDC_VECTOR_KEY</label>
    <length>16</length>
    <type>Text</type>
</CustomField>