force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/sfdc_aes_private_key__c.field-meta.xml
<CustomField>
    <fullName>sfdc_aes_private_key__c</fullName>
    <description>sfdc_aes_private_key</description>
    <label>SFDC_PRIVATE_KEY</label>
    <length>32</length>
    <type>Text</type>
</CustomField>