force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/sfdc_mber_no__c.field-meta.xml
<CustomField>
    <fullName>sfdc_mber_no__c</fullName>
    <description>회사 정보</description>
    <label>SFDC_MBER_NO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>