force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/sfdc_oauth_client_id__c.field-meta.xml
<CustomField>
    <fullName>sfdc_oauth_client_id__c</fullName>
    <description>sfdc_oauth_client_id</description>
    <label>SFDC_CLIENT ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>