force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/sfdc_oauth_client_secret__c.field-meta.xml
<CustomField>
    <fullName>sfdc_oauth_client_secret__c</fullName>
    <description>sfdc_oauth_client_secret</description>
    <label>SFDC_CLIENT SECRET</label>
    <length>255</length>
    <type>Text</type>
</CustomField>