force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/sfdc_oauth_password__c.field-meta.xml
<CustomField>
    <fullName>sfdc_oauth_password__c</fullName>
    <description>sfdc_oauth_password</description>
    <label>SFDC_PASSWORD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>