force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/sfdc_oauth_username__c.field-meta.xml
<CustomField>
    <fullName>sfdc_oauth_username__c</fullName>
    <description>sfdc_oauth_username</description>
    <label>SFDC_USER_NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>