force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/sfdc_org_sid__c.field-meta.xml
<CustomField>
    <fullName>sfdc_org_sid__c</fullName>
    <defaultValue>$Organization.Id</defaultValue>
    <description>sfdc_org_sid</description>
    <label>SFDC_ORG_ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>