force-app/main/default/objects/Notiforce_IfStaticValue__c/fields/sfdc_org_url__c.field-meta.xml
<CustomField>
    <fullName>sfdc_org_url__c</fullName>
    <description>sfdc_org_url</description>
    <label>SFDC_ORG URL</label>
    <type>Url</type>
</CustomField>